--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -72,5 +72,17 @@
     "images" : "الصور",
     "videos" : "الفيديوهات",
     "branches" : "الفروع",
-    "jobs" : "الوظائف"
+    "jobs" : "الوظائف",
+    "copy" : "© 2025 زلمة. جميع الحقوق محفوظة",
+    "value" : "قيمنا",
+    "value_description" : "نؤمن بمجموعة من القيم الأساسية التي توجه عملنا وتضمن تقديم أفضل الخدمات",
+    "trust" : "الثقة",
+    "trust_description" : "نوفر منصة موثوقة تجمع أفضل المتاجر المحلية المعتمدة",
+    "community" : "المجتمع",
+    "community_description" : "ندعم الاقتصاد المحلي ونساعد في بناء مجتمع تجاري قوي",
+    "ease" : "السهولة",
+    "ease_description" : "نسهل عملية البحث والوصول إلى المتاجر المحلية",
+    "quality" : "الجودة",
+    "quality_description" : "نضمن جودة عالية في المحتوى والخدمات المقدمة",
+    "all" : "الكل"
 }
