--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,9 +10,9 @@
   "more_stores": "View all stores",
   "featured_stores": "Featured stores",
   "explore_best_local_stores": "Discover the best local stores trusted by thousands",
-  "why_us_title": "Why Zalma?",
+  "why_us_title": "Why Zalmah?",
   "best_local_stores": "Best local stores",
-  "app_download_title": "Download the Zalma app now",
+  "app_download_title": "Download the Zalmah app now",
   "home": "Home",
   "categories_head": "Categories",
   "stores": "Stores",
@@ -29,5 +29,61 @@
   "search_for_stores": "Search for a store...",
   "store_categories": "Filter by category",
   "no_stores_found": "No stores found",
-  "no_stores_found_description": "We couldn't find any stores matching your search or selected category. Try changing the filter or searching with another keyword."
+  "no_stores_found_description": "We couldn't find any stores matching your search or selected category. Try changing the filter or searching with another keyword.",
+  "no_categories_found": "No categories found",
+  "no_categories_found_description": "We couldn't find any categories matching your search. Try changing the filter or searching with another keyword.",
+  "solutions": "Integrated Marketing Solutions",
+  "digital_marketing_solutions": "Digital Marketing Solutions",
+  "marketing_banner_description": "Choose the perfect plan for your project and get professional marketing solutions to help you grow and reach your target customers.",
+  "monthly": "Dinar/Monthly",
+  "buy_now": "Buy Now",
+  "passion": "We work with passion to serve the community",
+  "our_values": "Our Values",
+  "our_values_desc": "We believe in a set of core values that guide our work and ensure the best services.",
+  "contact_us_desc": "We are here to answer your inquiries and assist you. Don't hesitate to reach out to us.",
+  "address": "Address",
+  "phone": "Phone",
+  "email": "Email",
+  "work_time": "Working Hours",
+  "send_message": "Send us a message",
+  "fill_form": "Fill out the form below and we will get back to you as soon as possible",
+  "full_name": "Full Name",
+  "your_email": "Your Email",
+  "subject": "Subject",
+  "message": "Message",
+  "send_now": "Send Now",
+  "enter_full_name": "Enter your full name",
+  "select_subject": "Select Subject",
+  "enter_your_message": "Enter your message here...",
+  "join_us_title": "Do you have a store? Join us today!",
+  "join_us_desc": "Join the Zalmah platform and showcase your store to thousands of potential customers. We provide you with a great opportunity to reach a wider audience and increase your sales.",
+  "join_now": "Go to Plans & Pricing",
+  "faq_title": "Frequently Asked Questions",
+  "message_sent": "Your message has been sent successfully!",
+  "privacy_desc": "We care about your privacy and are committed to protecting your personal data.",
+  "terms_desc": "Please read the terms of service carefully before using our platform.",
+  "search_for_stores_in": "Search for stores in",
+  "all_stores": "All stores",
+  "work_day": "Working Days",
+  "about_store": "About the Store",
+  "website": "Website",
+  "dinar": "Dinar",
+  "offers": "Offers",
+  "images": "Images",
+  "videos": "Videos",
+  "branches": "Branches",
+  "jobs": "Jobs",
+  "copy": "© 2025 Zalmah. All rights reserved.",
+  "value": "Our Values",
+  "value_description": "We believe in a set of core values that guide our work and ensure the best services.",
+  "trust": "Trust",
+  "trust_description": "We provide a reliable platform that brings together the best local approved stores.",
+  "community": "Community",
+  "community_description": "We support the local economy and help build a strong business community.",
+  "ease": "Ease",
+  "ease_description": "We simplify the process of searching for and accessing local stores.",
+  "quality": "Quality",
+  "quality_description": "We ensure high quality in the content and services provided.",
+  "all" : "All"
 }
+
